src/test/deca/context/valid/created/Objet/InstanceOf.deca
class A{

}

class B{

}


{
    printlnx(3.0);
}