src/test/deca/context/invalid/created/SansObjet/MethodCall.deca
class A {
    int b;
    void a(){
        b();
    }
}

{

}